@@ -45,6 +45,11 @@ public:
                           const CovarianceMatrix & CovMat2,
                           const SquareMatrix & weightMatrix) const override;
 
+  /** Compute the HSIC index for one marginal*/
+  Scalar computeHSICIndex(const CovarianceMatrix &CovMat1,
+                          const CovarianceMatrix &CovMat2,
+                          const Point &weights) const override;
+
   /** Compute the asymptotic p-value */
   Scalar computePValue(const Gamma &dist, const UnsignedInteger n, const Scalar HSIC_obs, const Scalar mHSIC) const override;
 
