@@ -35,6 +35,8 @@
  * KrigingResult.getBasisCollection was removed in favor of KrigingResult.getBasis which returns a single Basis
  * GeneralLinearModelResult.getBasisCollection was removed in favor of GeneralLinearModelResult.getBasis which returns a single Basis
  * Deprecated EllipticalDistribution::getInverseCorrelation
+ * HSICStat arguments updated (covariance matrices instead of data + covariance models)
+ * Deprecated HSICStat relying on weight matrix
 
 === Documentation ===
  * Add API documentation to common use cases pages
